--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     </style>
 </head>
 <body>
-    <h1 class="title"><b>II. Digital Timeline:</b><br>Cybercrime Laws in the Philippines<br>Timeline</h1>
+    <h1 class="title"><b>II. Digital Timeline:</b><br>Cybercrime Laws in the Philippines</h1>
     <div class="container">
         <div class="timeline">
             <!-- Pre-2012 -->
